--- a/planes.html
+++ b/planes.html
@@ -5,6 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Planes | ZenSite</title>
 
+<!-- ===== GOOGLE ANALYTICS (REEMPLAZA G-XXXXXXX) ===== -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-XXXXXXX');
+</script>
+
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 html{scroll-behavior:smooth}
@@ -13,7 +22,6 @@ body{
   font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","Inter","Segoe UI",sans-serif;
   background:#05070c;
   color:#fff;
-  overflow-x:hidden;
 }
 
 /* BACKGROUND */
@@ -22,8 +30,8 @@ body::before{
   position:fixed;
   inset:0;
   background:
-    radial-gradient(circle at 15% 20%,rgba(0,200,255,.18),transparent 40%),
-    radial-gradient(circle at 85% 75%,rgba(120,90,255,.22),transparent 45%),
+    radial-gradient(circle at 20% 20%,rgba(0,200,255,.18),transparent 40%),
+    radial-gradient(circle at 80% 70%,rgba(120,90,255,.22),transparent 45%),
     #05070c;
   z-index:-2;
 }
@@ -38,11 +46,10 @@ body::after{
 /* HEADER */
 header{
   position:fixed;
-  top:0;
-  left:0;
+  top:0;left:0;
   width:100%;
   z-index:1000;
-  padding:16px 26px;
+  padding:18px 26px;
   background:rgba(255,255,255,.04);
   backdrop-filter:blur(16px);
   border-bottom:1px solid rgba(255,255,255,.08);
@@ -65,43 +72,42 @@ header{
   right:18px;
   display:flex;
   gap:6px;
-  z-index:2000;
 }
 .lang button{
-  padding:4px 10px;
+  padding:4px 9px;
   font-size:11px;
   border-radius:14px;
   border:1px solid rgba(255,255,255,.25);
   background:transparent;
   color:#fff;
-  font-weight:600;
+  font-weight:700;
+  cursor:pointer;
 }
 .lang .active{
   background:#00cfff;
   color:#000;
-  border-color:#00cfff;
 }
 
 /* MAIN */
 main{
-  margin-top:120px;
-  padding:40px 20px 120px;
-  max-width:1100px;
-  margin:auto;
+  margin-top:150px;
+  padding:0 20px 140px;
+  max-width:1200px;
+  margin-inline:auto;
 }
 
+/* TITLE */
 h1{
   text-align:center;
-  font-size:clamp(40px,6vw,64px);
-  font-weight:700;
-  letter-spacing:-.02em;
+  font-size:clamp(40px,6vw,72px);
+  margin-bottom:16px;
 }
 .subtitle{
   text-align:center;
-  margin:16px auto 70px;
-  max-width:760px;
-  font-size:clamp(16px,2.5vw,19px);
-  opacity:.85;
+  max-width:900px;
+  margin:0 auto 60px;
+  font-size:clamp(17px,2.4vw,22px);
+  opacity:.92;
   line-height:1.6;
 }
 
@@ -109,83 +115,123 @@ h1{
 .plans{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-  gap:30px;
+  gap:36px;
 }
 
-/* PLAN CARD */
+/* CARD */
 .plan{
-  background:linear-gradient(180deg,rgba(255,255,255,.08),rgba(255,255,255,.02));
-  border-radius:30px;
-  padding:36px 32px 40px;
-  box-shadow:0 50px 160px rgba(0,0,0,.85);
-  display:flex;
-  flex-direction:column;
-  gap:22px;
   position:relative;
+  padding:36px 32px 40px;
+  border-radius:32px;
+  background:linear-gradient(160deg,rgba(255,255,255,.06),rgba(255,255,255,.02));
+  box-shadow:0 40px 140px rgba(0,0,0,.85);
 }
-
-/* PREMIUM HIGHLIGHT */
-.plan.premium{
-  outline:2px solid rgba(0,200,255,.35);
-  box-shadow:0 60px 180px rgba(0,200,255,.25);
-}
-
 .plan h2{
-  font-size:26px;
-  font-weight:700;
-  letter-spacing:-.01em;
+  font-size:28px;
+  margin-bottom:8px;
 }
-
 .price{
-  font-size:48px;
-  font-weight:800;
+  font-size:52px;
+  font-weight:900;
   color:#00cfff;
-  letter-spacing:-.03em;
+  margin-bottom:18px;
 }
-
 .plan p{
-  font-size:15.5px;
-  opacity:.9;
-  line-height:1.6;
+  font-size:16px;
+  opacity:.92;
+  margin-bottom:22px;
+  line-height:1.55;
 }
-
-/* FEATURES */
 .features{
   display:flex;
   flex-direction:column;
-  gap:14px;
-  font-size:15px;
-}
-.features span{
-  display:flex;
-  align-items:flex-start;
+  gap:10px;
+  margin-bottom:30px;
 }
 .features span::before{
-  content:"✓";
+  content:"✓ ";
   color:#00cfff;
-  margin-right:12px;
-  font-weight:700;
+  font-weight:900;
 }
 
 /* CTA */
-button.cta{
-  margin-top:14px;
+.cta{
+  width:100%;
   padding:15px;
   border:none;
-  border-radius:26px;
+  border-radius:18px;
+  font-size:16px;
+  font-weight:900;
   background:#00cfff;
   color:#000;
-  font-weight:800;
-  font-size:15px;
   cursor:pointer;
+}
+
+/* MOST SOLD */
+.most{
+  border:2px solid rgba(0,200,255,.45);
+  box-shadow:0 80px 240px rgba(0,200,255,.3);
+}
+.badge{
+  position:absolute;
+  top:-16px;
+  left:50%;
+  transform:translateX(-50%);
+  background:#00cfff;
+  color:#000;
+  padding:7px 18px;
+  border-radius:16px;
+  font-size:11px;
+  font-weight:900;
+  letter-spacing:.8px;
+}
+
+/* PREMIUM */
+.premium{
+  background:linear-gradient(160deg,rgba(120,90,255,.22),rgba(0,0,0,.45));
 }
 
 /* FOOTER */
 footer{
-  margin-top:120px;
   text-align:center;
-  opacity:.5;
+  padding:50px 20px 30px;
+  opacity:.55;
   font-size:13px;
+}
+
+/* POPUP */
+.popup{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.65);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  z-index:3000;
+}
+.popup-box{
+  background:#0b0f1a;
+  border-radius:28px;
+  padding:36px 32px;
+  max-width:380px;
+  text-align:center;
+}
+.popup-box h3{
+  font-size:22px;
+  margin-bottom:12px;
+}
+.popup-box p{
+  font-size:16px;
+  margin-bottom:22px;
+}
+.popup-box button{
+  padding:14px 22px;
+  border:none;
+  border-radius:18px;
+  background:#00cfff;
+  color:#000;
+  font-weight:900;
+  cursor:pointer;
 }
 </style>
 </head>
@@ -194,76 +240,75 @@ footer{
 
 <header>
   <nav class="nav">
-    <a href="index.html">Inicio</a>
-    <a href="demo.html">Demos</a>
-    <a href="planes.html">Planes</a>
-    <a href="nosotros.html">Nosotros</a>
+    <a href="index.html" data-es="Inicio" data-en="Home">Inicio</a>
+    <a href="demo.html" data-es="Demos" data-en="Demos">Demos</a>
+    <a href="planes.html" data-es="Planes" data-en="Plans">Planes</a>
+    <a href="nosotros.html" data-es="Nosotros" data-en="About">Nosotros</a>
   </nav>
 </header>
 
 <div class="lang">
-  <button class="active">ES</button>
-  <button>EN</button>
+  <button id="esBtn" class="active">ES</button>
+  <button id="enBtn">EN</button>
 </div>
 
 <main>
-  <h1>Planes ZenSite</h1>
-  <p class="subtitle">
-    Pagas una sola vez. Diseño premium orientado a resultados.
-    Sin mensualidades. La web es 100% tuya.
+  <h1 data-es="Planes ZenSite" data-en="ZenSite Plans">Planes ZenSite</h1>
+
+  <p class="subtitle"
+     data-es="No vendemos páginas. Creamos sistemas digitales que generan confianza, posicionan tu marca y convierten visitas en clientes."
+     data-en="We don’t sell websites. We build digital systems that create trust, position your brand and turn visits into clients.">
   </p>
 
   <section class="plans">
 
-    <!-- Z -->
+    <!-- PLAN Z -->
     <div class="plan">
       <h2>Plan Z</h2>
       <div class="price">$200</div>
-      <p>
-        Para negocios que necesitan verse profesionales,
-        generar confianza y convertir desde el primer día.
+      <p data-es="Para negocios que necesitan verse profesionales y confiables desde el primer contacto."
+         data-en="For businesses that need to look professional and trustworthy from the first contact.">
       </p>
       <div class="features">
-        <span>Landing optimizada para conversión</span>
-        <span>Diseño premium personalizado</span>
-        <span>Experiencia móvil perfecta</span>
-        <span>Contacto directo por WhatsApp</span>
+        <span data-es="Landing enfocada en conversión" data-en="Conversion-focused landing page"></span>
+        <span data-es="Diseño premium personalizado" data-en="Custom premium design"></span>
+        <span data-es="Optimización total para móviles" data-en="Fully mobile optimized"></span>
+        <span data-es="Contacto directo por WhatsApp" data-en="Direct WhatsApp contact"></span>
       </div>
-      <button class="cta" onclick="contact('Plan Z $200')">Contactar</button>
+      <button class="cta" onclick="contact('Plan Z - $200')">Contactar</button>
     </div>
 
-    <!-- Z+ -->
-    <div class="plan">
+    <!-- PLAN Z+ -->
+    <div class="plan most">
+      <div class="badge" data-es="Más Vendido" data-en="Best Value"></div>
       <h2>Plan Z+</h2>
       <div class="price">$480</div>
-      <p>
-        Pensado para marcas que quieren crecer,
-        posicionarse y ofrecer una experiencia sólida.
+      <p data-es="El equilibrio perfecto entre imagen, estructura y crecimiento. El plan que más contratan."
+         data-en="The perfect balance between image, structure and growth. Our most chosen plan.">
       </p>
       <div class="features">
-        <span>Web multi-sección completa</span>
-        <span>Animaciones tipo app</span>
-        <span>Estructura profesional escalable</span>
-        <span>Base optimizada para SEO</span>
+        <span data-es="Web multi-sección completa" data-en="Full multi-section website"></span>
+        <span data-es="Animaciones tipo app premium" data-en="Premium app-style animations"></span>
+        <span data-es="Arquitectura profesional escalable" data-en="Scalable professional architecture"></span>
+        <span data-es="Base optimizada para SEO" data-en="SEO-ready foundation"></span>
       </div>
-      <button class="cta" onclick="contact('Plan Z+ $480')">Contactar</button>
+      <button class="cta" onclick="contact('Plan Z+ - $480')">Contactar</button>
     </div>
 
-    <!-- PREMIUM -->
+    <!-- PLAN PREMIUM -->
     <div class="plan premium">
       <h2>Z Premium</h2>
       <div class="price">$720</div>
-      <p>
-        Solución completa para vender productos,
-        gestionar inventario y escalar tu negocio.
+      <p data-es="Solución completa para vender online. Ideal para tiendas, marcas y proyectos que quieren escalar."
+         data-en="Complete solution to sell online. Ideal for stores, brands and scalable projects.">
       </p>
       <div class="features">
-        <span>Tienda online completa</span>
-        <span>Carrito de compras profesional</span>
-        <span>Gestión de inventario y productos</span>
-        <span>Diseño tipo sistema / app premium</span>
+        <span data-es="Tienda online profesional" data-en="Professional online store"></span>
+        <span data-es="Carrito de compras avanzado" data-en="Advanced shopping cart"></span>
+        <span data-es="Gestión de inventario" data-en="Inventory management"></span>
+        <span data-es="Sistema listo para escalar" data-en="Ready-to-scale system"></span>
       </div>
-      <button class="cta" onclick="contact('Z Premium $720')">Contactar</button>
+      <button class="cta" onclick="contact('Z Premium - $720')">Contactar</button>
     </div>
 
   </section>
@@ -273,10 +318,49 @@ footer{
   © 2025 ZenSite. Todos los derechos reservados.
 </footer>
 
+<!-- POPUP -->
+<div class="popup" id="popup">
+  <div class="popup-box">
+    <h3>🎁 15% OFF</h3>
+    <p data-es="Plan Z+ es el más contratado este mes."
+       data-en="Plan Z+ is the most chosen this month.">
+    </p>
+    <button onclick="goWhatsapp()">Hablar por WhatsApp</button>
+  </div>
+</div>
+
 <script>
+/* TRANSLATION */
+const esBtn=document.getElementById("esBtn");
+const enBtn=document.getElementById("enBtn");
+function setLang(lang){
+  document.querySelectorAll("[data-"+lang+"]").forEach(el=>{
+    el.textContent = el.dataset[lang];
+  });
+}
+esBtn.onclick=()=>{esBtn.classList.add("active");enBtn.classList.remove("active");setLang("es");};
+enBtn.onclick=()=>{enBtn.classList.add("active");esBtn.classList.remove("active");setLang("en");};
+
+/* CONTACT */
 function contact(plan){
-  const msg = encodeURIComponent("Hola, quiero contratar el "+plan+".");
-  window.open("https://wa.me/15027942412?text="+msg,"_blank");
+  gtag('event','plan_click',{plan:plan});
+  window.open(
+    "https://wa.me/15027942412?text="+
+    encodeURIComponent("Hola, quiero información sobre "+plan),
+    "_blank"
+  );
+}
+
+/* POPUP */
+if(!localStorage.getItem("popupSeen")){
+  setTimeout(()=>{
+    document.getElementById("popup").style.display="flex";
+    localStorage.setItem("popupSeen","yes");
+  },9000);
+}
+function goWhatsapp(){
+  gtag('event','popup_whatsapp');
+  window.open("https://wa.me/15027942412","_blank");
 }
 </script>
 
