--- a/demo.html
+++ b/demo.html
@@ -1,214 +1,572 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>ZenSite | Demo</title>
 
 <style>
+:root{
+  --bg:#050505;
+  --line:rgba(255,255,255,.10);
+  --glass:rgba(20,20,20,.82);
+  --muted:rgba(255,255,255,.78);
+  --muted2:rgba(255,255,255,.55);
+  --r:26px;
+}
+
 *{margin:0;padding:0;box-sizing:border-box}
 body{
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-  background:#050505;
+  font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
+  background:var(--bg);
   color:#fff;
   overflow-x:hidden;
 }
 
-/* ===== HEADER ===== */
+/* ===== TOP ===== */
 .header{
-  position:fixed;
-  top:0;
-  left:0;
-  width:100%;
-  padding:18px 24px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  background:linear-gradient(to bottom, rgba(0,0,0,.7), transparent);
-  z-index:100;
+  position:fixed; top:0; left:0; width:100%;
+  padding:18px 22px;
+  display:flex; align-items:center; justify-content:space-between;
+  background:linear-gradient(to bottom, rgba(0,0,0,.85), rgba(0,0,0,.35), transparent);
+  z-index:1000;
 }
-
-.header-left{
-  display:flex;
-  align-items:center;
-  gap:16px;
-}
-
 .back{
-  text-decoration:none;
-  color:#fff;
-  font-size:22px;
-  opacity:.8;
+  color:#fff; text-decoration:none;
+  font-size:22px; font-weight:950;
+  opacity:.85;
 }
 .back:hover{opacity:1}
-
-.header-right{
-  display:flex;
-  gap:14px;
-  font-weight:700;
-}
-
-.lang{
+.langs{display:flex; gap:14px; align-items:center}
+.langs span{
   cursor:pointer;
-  opacity:.5;
+  font-weight:950;
+  letter-spacing:.5px;
+  opacity:.55;
+  user-select:none;
 }
-.lang.active{opacity:1}
+.langs span.active{opacity:1}
 
 /* ===== HERO ===== */
 .hero{
-  padding:140px 8% 80px;
+  padding:140px 8% 92px;
   background:
-    radial-gradient(700px 400px at 50% 0%, rgba(0,120,255,.25), transparent 65%),
-    radial-gradient(600px 400px at 20% 80%, rgba(0,255,170,.18), transparent 65%),
-    #050505;
+    radial-gradient(760px 420px at 50% 0%, rgba(0,120,255,.28), transparent 65%),
+    radial-gradient(650px 420px at 20% 82%, rgba(0,255,170,.18), transparent 65%),
+    radial-gradient(650px 420px at 80% 86%, rgba(255,200,0,.10), transparent 65%),
+    var(--bg);
 }
-
 .hero h1{
-  font-size:clamp(40px,6vw,72px);
-  font-weight:900;
-  line-height:1.05;
-  text-shadow:0 10px 40px rgba(0,0,0,.7);
+  font-size:clamp(42px,6vw,74px);
+  font-weight:950;
+  line-height:1.03;
+  text-shadow:0 26px 70px rgba(0,0,0,.9);
 }
-
 .hero p{
   margin-top:18px;
-  max-width:680px;
+  max-width:820px;
   font-size:18px;
-  opacity:.85;
+  color:var(--muted);
 }
+
+/* ===== FILTERS ===== */
+.filters{
+  margin-top:34px;
+  display:flex;
+  gap:10px;
+  flex-wrap:wrap;
+}
+.pill{
+  padding:10px 14px;
+  border-radius:999px;
+  border:1px solid rgba(255,255,255,.14);
+  background:rgba(0,0,0,.35);
+  color:#fff;
+  font-weight:950;
+  cursor:pointer;
+  opacity:.75;
+  transition:.18s ease;
+}
+.pill:hover{opacity:1; transform:translateY(-1px)}
+.pill.active{
+  opacity:1;
+  background:#fff;
+  color:#000;
+}
+
+/* ===== SLIDER ===== */
+.slider{
+  margin:70px auto 0;
+  max-width:1200px;
+  overflow:hidden;
+  border-radius:var(--r);
+  border:1px solid var(--line);
+  background:#000;
+  position:relative;
+  box-shadow:0 30px 90px rgba(0,0,0,.65);
+}
+.slider::after{
+  content:"";
+  position:absolute; inset:0;
+  pointer-events:none;
+  background:linear-gradient(to bottom, rgba(0,0,0,.10), transparent 35%, rgba(0,0,0,.25));
+}
+.track{
+  display:flex;
+  transition:transform .65s cubic-bezier(.2,.9,.2,1);
+  will-change:transform;
+}
+.slide{
+  min-width:100%;
+  position:relative;
+  background:#000;
+}
+.slide img{
+  width:100%;
+  height: clamp(320px, 52vh, 520px); /* control pro */
+  object-fit: cover;
+  display:block;
+  filter: contrast(1.03) saturate(1.02);
+  transition:transform .45s ease, filter .45s ease;
+}
+@media (hover:hover) and (pointer:fine){
+  .slide:hover img{
+    transform:scale(1.03);
+    filter: contrast(1.08) saturate(1.06);
+  }
+}
+.tag{
+  position:absolute;
+  top:16px; left:16px;
+  background:rgba(0,0,0,.65);
+  border:1px solid rgba(255,255,255,.20);
+  padding:8px 14px;
+  border-radius:999px;
+  font-weight:950;
+  font-size:13px;
+  letter-spacing:.4px;
+  backdrop-filter: blur(10px);
+  z-index:2;
+}
+.hint{
+  position:absolute;
+  top:16px; right:16px;
+  padding:8px 12px;
+  border-radius:999px;
+  background:rgba(0,0,0,.55);
+  border:1px solid rgba(255,255,255,.18);
+  font-weight:900;
+  font-size:12px;
+  opacity:.78;
+  z-index:2;
+}
+
+/* DOTS */
+.dots{
+  position:absolute;
+  bottom:16px;
+  left:50%;
+  transform:translateX(-50%);
+  display:flex;
+  gap:10px;
+  z-index:2;
+}
+.dot{
+  width:10px; height:10px;
+  border-radius:50%;
+  background:rgba(255,255,255,.35);
+  transition:.2s ease;
+  cursor:pointer;
+}
+.dot.active{background:#fff; transform:scale(1.1)}
 
 /* ===== STATS ===== */
 .stats{
   margin-top:70px;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:28px;
+  gap:20px;
 }
-
 .stat{
-  background:rgba(20,20,20,.85);
-  border:1px solid rgba(255,255,255,.1);
+  background:var(--glass);
+  border:1px solid var(--line);
   border-radius:22px;
-  padding:36px 20px;
+  padding:34px 18px;
   text-align:center;
-  backdrop-filter:blur(14px);
-  animation:fadeUp .8s ease both;
+  backdrop-filter: blur(14px);
+  transform: translateY(10px);
+  opacity:0;
+  transition:.6s ease;
 }
-
+.stat.show{transform:translateY(0); opacity:1}
 .stat strong{
-  font-size:42px;
-  font-weight:900;
+  font-size:46px;
+  font-weight:950;
 }
-
 .stat span{
   display:block;
   margin-top:6px;
-  opacity:.7;
-}
-
-/* ===== CTA ===== */
-.cta{
-  margin-top:90px;
-  text-align:center;
-}
-
-.cta h2{
-  font-size:clamp(34px,5vw,56px);
+  color:var(--muted2);
   font-weight:900;
-}
-
-.cta p{
-  margin-top:14px;
-  opacity:.8;
 }
 
 /* ===== FOOTER ===== */
 footer{
-  margin-top:120px;
-  padding:30px;
+  margin-top:100px;
+  padding:28px;
   text-align:center;
-  font-size:14px;
-  opacity:.5;
+  font-size:13px;
+  opacity:.55;
 }
 
-/* ===== ANIM ===== */
-@keyframes fadeUp{
-  from{opacity:0;transform:translateY(40px)}
-  to{opacity:1;transform:translateY(0)}
+/* ===== MODAL ===== */
+.modal{
+  position:fixed; inset:0;
+  background:rgba(0,0,0,.85);
+  backdrop-filter: blur(10px);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  z-index:2000;
+}
+.modal.show{display:flex}
+.modal-inner{
+  width:min(1120px, 92vw);
+  border-radius:22px;
+  border:1px solid rgba(255,255,255,.14);
+  background:rgba(10,10,10,.65);
+  overflow:hidden;
+  position:relative;
+  box-shadow:0 40px 140px rgba(0,0,0,.75);
+}
+.modal-img{
+  width:100%;
+  height:min(72vh, 720px);
+  object-fit: contain; /* pro: sin recorte */
+  background:#000;
+  display:block;
+}
+.modal-top{
+  position:absolute; top:12px; left:12px; right:12px;
+  display:flex; justify-content:space-between; align-items:center;
+  gap:12px;
+  z-index:2;
+}
+.modal-badge{
+  padding:8px 12px;
+  border-radius:999px;
+  background:rgba(0,0,0,.55);
+  border:1px solid rgba(255,255,255,.18);
+  font-weight:950;
+  font-size:12px;
+}
+.modal-close{
+  width:38px; height:38px;
+  border-radius:999px;
+  display:grid; place-items:center;
+  cursor:pointer;
+  background:rgba(0,0,0,.55);
+  border:1px solid rgba(255,255,255,.18);
+  font-weight:950;
+}
+.modal-nav{
+  position:absolute;
+  top:50%;
+  transform:translateY(-50%);
+  width:46px; height:46px;
+  border-radius:999px;
+  display:grid; place-items:center;
+  cursor:pointer;
+  background:rgba(0,0,0,.55);
+  border:1px solid rgba(255,255,255,.18);
+  font-size:22px;
+  z-index:2;
+  user-select:none;
+}
+.modal-prev{left:12px}
+.modal-next{right:12px}
+.modal-nav:hover,.modal-close:hover{filter:brightness(1.15)}
+
+@media (max-width:520px){
+  .hero{padding:126px 6% 80px}
+  .hero p{font-size:16px}
+  .slide img{height:44vh}
+  .modal-img{height:70vh}
 }
 </style>
 </head>
 
 <body>
 
-<!-- HEADER -->
 <header class="header">
-  <div class="header-left">
-    <a href="index.html" class="back">←</a>
-  </div>
-  <div class="header-right">
-    <span class="lang active" data-lang="es">ES</span>
-    <span class="lang" data-lang="en">EN</span>
+  <a class="back" href="index.html" aria-label="Volver a Inicio">←</a>
+  <div class="langs">
+    <span class="active" data-lang="es">ES</span>
+    <span data-lang="en">EN</span>
   </div>
 </header>
 
-<!-- HERO -->
 <section class="hero">
-  <h1 data-es="Demos reales,<br>resultados reales"
-      data-en="Real demos,<br>real results">
-    Demos reales,<br>resultados reales
+  <h1 data-es="Galería de demos"
+      data-en="Demo gallery">
+    Galería de demos
   </h1>
 
-  <p data-es="Ejemplos de proyectos diseñados para convertir, generar confianza y verse profesionales desde el primer segundo."
-     data-en="Examples of projects designed to convert, build trust and look professional from the very first second.">
-    Ejemplos de proyectos diseñados para convertir, generar confianza y verse profesionales desde el primer segundo.
+  <p data-es="Explora ejemplos reales de landing pages, sitios multi-página y tiendas online."
+     data-en="Explore real examples of landing pages, multi-page sites and online stores.">
+    Explora ejemplos reales de landing pages, sitios multi-página y tiendas online.
   </p>
+
+  <!-- FILTERS -->
+  <div class="filters" id="filters">
+    <button class="pill active" data-filter="all" data-es="Todos" data-en="All">Todos</button>
+    <button class="pill" data-filter="landing" data-es="Landing" data-en="Landing">Landing</button>
+    <button class="pill" data-filter="web" data-es="Web" data-en="Website">Web</button>
+    <button class="pill" data-filter="store" data-es="Tienda" data-en="Store">Tienda</button>
+  </div>
+
+  <!-- SLIDER -->
+  <div class="slider" id="sliderBox">
+    <div class="track" id="track">
+      <div class="slide" data-type="landing" data-label="Landing">
+        <span class="tag">Landing</span><span class="hint" data-es="Toca para ver" data-en="Tap to view">Toca para ver</span>
+        <img src="demo1.jpg" alt="Demo 1">
+      </div>
+
+      <div class="slide" data-type="web" data-label="Web">
+        <span class="tag">Web</span><span class="hint" data-es="Toca para ver" data-en="Tap to view">Toca para ver</span>
+        <img src="demo2.jpg" alt="Demo 2">
+      </div>
+
+      <div class="slide" data-type="web" data-label="Web">
+        <span class="tag">Web</span><span class="hint" data-es="Toca para ver" data-en="Tap to view">Toca para ver</span>
+        <img src="demo3.jpg" alt="Demo 3">
+      </div>
+
+      <div class="slide" data-type="store" data-label="Tienda">
+        <span class="tag">Tienda</span><span class="hint" data-es="Toca para ver" data-en="Tap to view">Toca para ver</span>
+        <img src="demo4.jpg" alt="Demo 4">
+      </div>
+
+      <div class="slide" data-type="store" data-label="Tienda">
+        <span class="tag">Tienda</span><span class="hint" data-es="Toca para ver" data-en="Tap to view">Toca para ver</span>
+        <img src="demo5.jpg" alt="Demo 5">
+      </div>
+    </div>
+
+    <div class="dots" id="dots"></div>
+  </div>
 
   <!-- STATS -->
   <div class="stats">
-    <div class="stat">
-      <strong>15</strong>
-      <span data-es="Proyectos entregados" data-en="Projects delivered">Proyectos entregados</span>
-    </div>
-    <div class="stat">
-      <strong>2</strong>
-      <span data-es="Países" data-en="Countries">Países</span>
-    </div>
-    <div class="stat">
-      <strong>98%</strong>
-      <span data-es="Satisfacción" data-en="Satisfaction">Satisfacción</span>
-    </div>
-  </div>
-
-  <!-- CTA -->
-  <div class="cta">
-    <h2 data-es="¿Listo para ver tu proyecto aquí?"
-        data-en="Ready to see your project here?">
-      ¿Listo para ver tu proyecto aquí?
-    </h2>
-    <p data-es="Tu web es tu primera impresión. Haz que cuente."
-       data-en="Your website is your first impression. Make it count.">
-      Tu web es tu primera impresión. Haz que cuente.
-    </p>
+    <div class="stat"><strong data-count="15">0</strong><span data-es="Proyectos entregados" data-en="Projects delivered">Proyectos entregados</span></div>
+    <div class="stat"><strong data-count="2">0</strong><span data-es="Países" data-en="Countries">Países</span></div>
+    <div class="stat"><strong data-count="98">0</strong><span data-es="Satisfacción" data-en="Satisfaction">Satisfacción</span></div>
   </div>
 </section>
 
-<footer>
-  © 2025 ZenSite. Todos los derechos reservados.
-</footer>
+<footer>© 2025 ZenSite</footer>
+
+<!-- MODAL VIEWER -->
+<div class="modal" id="modal" aria-hidden="true">
+  <div class="modal-inner" role="dialog" aria-modal="true">
+    <div class="modal-top">
+      <div class="modal-badge" id="modalBadge">Demo</div>
+      <div class="modal-close" id="modalClose" aria-label="Cerrar">✕</div>
+    </div>
+    <div class="modal-nav modal-prev" id="modalPrev" aria-label="Anterior">‹</div>
+    <div class="modal-nav modal-next" id="modalNext" aria-label="Siguiente">›</div>
+    <img class="modal-img" id="modalImg" src="" alt="Vista demo">
+  </div>
+</div>
 
 <script>
-const langs=document.querySelectorAll(".lang");
-const texts=document.querySelectorAll("[data-es]");
+/* ========= CORE STATE ========= */
+const track = document.getElementById("track");
+const sliderBox = document.getElementById("sliderBox");
+const allSlides = Array.from(track.querySelectorAll(".slide"));
 
-langs.forEach(btn=>{
-  btn.onclick=()=>{
-    langs.forEach(b=>b.classList.remove("active"));
-    btn.classList.add("active");
-    const l=btn.dataset.lang;
-    texts.forEach(t=>t.innerHTML=t.dataset[l]);
-  }
+let currentList = [...allSlides];
+let index = 0;
+let timer = null;
+
+/* ========= DOTS ========= */
+const dotsBox = document.getElementById("dots");
+
+function renderDots(){
+  dotsBox.innerHTML = "";
+  currentList.forEach((_, i) => {
+    const d = document.createElement("div");
+    d.className = "dot" + (i === index ? " active" : "");
+    d.addEventListener("click", () => { index = i; update(); restartAuto(); });
+    dotsBox.appendChild(d);
+  });
+}
+
+function setActiveDot(){
+  const dots = dotsBox.querySelectorAll(".dot");
+  dots.forEach((d, i) => d.classList.toggle("active", i === index));
+}
+
+/* ========= SLIDER UPDATE ========= */
+function update(){
+  track.style.transform = `translateX(-${index * 100}%)`;
+  setActiveDot();
+}
+
+/* ========= AUTO PLAY ========= */
+function startAuto(){
+  stopAuto();
+  timer = setInterval(() => {
+    if(currentList.length <= 1) return;
+    index = (index + 1) % currentList.length;
+    update();
+  }, 4200);
+}
+function stopAuto(){ if(timer) clearInterval(timer); timer = null; }
+function restartAuto(){ startAuto(); }
+
+/* ========= SWIPE ========= */
+let startX = 0;
+track.addEventListener("touchstart", e => startX = e.touches[0].clientX, {passive:true});
+track.addEventListener("touchend", e => {
+  const endX = e.changedTouches[0].clientX;
+  if(currentList.length <= 1) return;
+  if(startX - endX > 50) index = (index + 1) % currentList.length;
+  if(endX - startX > 50) index = (index - 1 + currentList.length) % currentList.length;
+  update(); restartAuto();
 });
+
+/* ========= FILTERS ========= */
+const filterBar = document.getElementById("filters");
+filterBar.addEventListener("click", (e) => {
+  const btn = e.target.closest(".pill");
+  if(!btn) return;
+
+  filterBar.querySelectorAll(".pill").forEach(b => b.classList.remove("active"));
+  btn.classList.add("active");
+
+  const type = btn.dataset.filter;
+  track.innerHTML = "";
+
+  currentList = (type === "all") ? [...allSlides] : allSlides.filter(s => s.dataset.type === type);
+  currentList.forEach(s => track.appendChild(s));
+
+  index = 0;
+  renderDots();
+  update();
+  restartAuto();
+});
+
+/* ========= MODAL ========= */
+const modal = document.getElementById("modal");
+const modalImg = document.getElementById("modalImg");
+const modalBadge = document.getElementById("modalBadge");
+const modalClose = document.getElementById("modalClose");
+const modalPrev = document.getElementById("modalPrev");
+const modalNext = document.getElementById("modalNext");
+
+function modalLoad(){
+  const img = currentList[index].querySelector("img");
+  modalImg.src = img.getAttribute("src");
+  modalBadge.textContent = currentList[index].dataset.label || "Demo";
+}
+
+function openModal(i){
+  index = i;
+  modalLoad();
+  modal.classList.add("show");
+  modal.setAttribute("aria-hidden","false");
+  stopAuto();
+}
+
+function closeModal(){
+  modal.classList.remove("show");
+  modal.setAttribute("aria-hidden","true");
+  restartAuto();
+}
+
+function step(dir){
+  if(currentList.length <= 1) return;
+  index = (index + dir + currentList.length) % currentList.length;
+  modalLoad();
+  update();
+}
+
+/* click en slide => modal */
+track.addEventListener("click", (e) => {
+  const s = e.target.closest(".slide");
+  if(!s) return;
+  const i = currentList.indexOf(s);
+  openModal(i);
+});
+
+modalClose.addEventListener("click", closeModal);
+modalPrev.addEventListener("click", () => step(-1));
+modalNext.addEventListener("click", () => step(1));
+
+/* click fuera => cerrar */
+modal.addEventListener("click", (e) => {
+  if(e.target === modal) closeModal();
+});
+
+/* teclado */
+document.addEventListener("keydown", (e) => {
+  if(!modal.classList.contains("show")) return;
+  if(e.key === "Escape") closeModal();
+  if(e.key === "ArrowLeft") step(-1);
+  if(e.key === "ArrowRight") step(1);
+});
+
+/* swipe dentro del modal */
+let mStart = 0;
+modalImg.addEventListener("touchstart", e => mStart = e.touches[0].clientX, {passive:true});
+modalImg.addEventListener("touchend", e => {
+  const mEnd = e.changedTouches[0].clientX;
+  if(mStart - mEnd > 50) step(1);
+  if(mEnd - mStart > 50) step(-1);
+});
+
+/* ========= COUNTERS + REVEAL ========= */
+const statEls = document.querySelectorAll(".stat");
+const obs = new IntersectionObserver((entries)=>{
+  entries.forEach(ent=>{
+    if(!ent.isIntersecting) return;
+    ent.target.classList.add("show");
+    const num = ent.target.querySelector("[data-count]");
+    if(num && !num.dataset.done){
+      num.dataset.done = "1";
+      const target = +num.dataset.count;
+      let n = 0;
+      const inc = Math.max(1, Math.floor(target/40));
+      const t = setInterval(()=>{
+        n += inc;
+        if(n >= target){ n = target; clearInterval(t); }
+        num.textContent = (target===98 ? n : n);
+        if(num.dataset.count === "98") num.textContent = n; // porcentaje se queda numérico
+      }, 28);
+    }
+  });
+},{threshold:.35});
+
+statEls.forEach(s=>obs.observe(s));
+
+/* ========= LANG ========= */
+const langBtns = document.querySelectorAll(".langs span");
+const transEls = document.querySelectorAll("[data-es]");
+
+function setLang(l){
+  langBtns.forEach(b=>b.classList.toggle("active", b.dataset.lang===l));
+  transEls.forEach(el => { el.textContent = el.dataset[l]; });
+}
+
+langBtns.forEach(b=>b.addEventListener("click", ()=>setLang(b.dataset.lang)));
+
+/* Inicial */
+renderDots();
+update();
+startAuto();
+setLang("es");
 </script>
 
 </body>
